--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-<span style="font-size: small;"># Compiled source #  
+# Compiled source #  
 ###################  
 *.com  
 *.class  
@@ -7,6 +7,11 @@
 *.o  
 *.so  
   
+# Preview #  
+############  
+*.SchDocPreview
+*.$$$Preview
+
 # Packages #  
 ############  
 # it's better to unpack these files and commit the raw source  
@@ -36,4 +41,4 @@
 Icon?  
 ehthumbs.db  
 Thumbs.db  
-</span>  
+
